--- a/public/newpass.html
+++ b/public/newpass.html
@@ -9,7 +9,7 @@
 <body>
     enter the new password <br>
     <form action="/newpass" method="post">
-    <input type="text" name="newpass">
+    <input type="password" name="newpass">
     <button type="submit" name="">go</button>
 </form>
 </body>
